[gd_scene load_steps=2 format=2]

[ext_resource path="res://txt.gd" type="Script" id=1]

[node name="SyndiBox" type="ReferenceRect"]
pause_mode = 2
margin_right = 451.0
margin_bottom = 82.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
ADVANCE_ACTION = "jump"
PAUSE_AT_PUNCTUATION = true

[connection signal="section_finished" from="." to="." method="_on_SyndiBox_section_finished"]
[connection signal="text_finished" from="." to="." method="_on_SyndiBox_text_finished"]
